// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonGroup renders the buttons or CompactButtonGroups with 16px spaces 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  white-space: nowrap;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 4px;
  border-style: solid;
  border-width: 2px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: capitalize;
  -webkit-transition: 0.15s;
  transition: 0.15s;
  vertical-align: baseline;
  white-space: nowrap;
  background-color: transparent;
  border-color: #05192d;
  color: #05192d;
  padding: 0 15px;
  margin-left: 0;
}

.emotion-1:active {
  -webkit-transform: perspective(1px) scale(0.975);
  -moz-transform: perspective(1px) scale(0.975);
  -ms-transform: perspective(1px) scale(0.975);
  transform: perspective(1px) scale(0.975);
}

.emotion-1:disabled,
.emotion-1:hover:disabled,
.emotion-1:active:disabled {
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-1:focus {
  outline: 0;
}

.emotion-1:hover {
  background-color: rgba(5, 25, 45, 0.15);
  border-color: #05192d;
  color: #05192d;
}

.emotion-2 {
  color: rgb(5, 25, 45);
  font-family: Studio-Feixen-Sans,Arial;
  font-style: normal;
  font-size: 16px;
  font-weight: 400;
  font-size: 16px;
  line-height: 44px;
  color: #05192d;
  font-weight: bold;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 4px;
  border-style: solid;
  border-width: 2px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: capitalize;
  -webkit-transition: 0.15s;
  transition: 0.15s;
  vertical-align: baseline;
  white-space: nowrap;
  background-color: transparent;
  border-color: #05192d;
  color: #05192d;
  padding: 0 15px;
  margin-left: 16px;
}

.emotion-3:active {
  -webkit-transform: perspective(1px) scale(0.975);
  -moz-transform: perspective(1px) scale(0.975);
  -ms-transform: perspective(1px) scale(0.975);
  transform: perspective(1px) scale(0.975);
}

.emotion-3:disabled,
.emotion-3:hover:disabled,
.emotion-3:active:disabled {
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-3:focus {
  outline: 0;
}

.emotion-3:hover {
  background-color: rgba(5, 25, 45, 0.15);
  border-color: #05192d;
  color: #05192d;
}

.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  white-space: nowrap;
  margin-left: 16px;
}

.emotion-8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 4px;
  border-style: solid;
  border-width: 2px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: capitalize;
  -webkit-transition: 0.15s;
  transition: 0.15s;
  vertical-align: baseline;
  white-space: nowrap;
  background-color: transparent;
  border-color: #05192d;
  color: #05192d;
  padding: 0 15px;
  border-radius: 4px 0px 0px 4px;
  margin: 0;
}

.emotion-8:active {
  -webkit-transform: perspective(1px) scale(0.975);
  -moz-transform: perspective(1px) scale(0.975);
  -ms-transform: perspective(1px) scale(0.975);
  transform: perspective(1px) scale(0.975);
}

.emotion-8:disabled,
.emotion-8:hover:disabled,
.emotion-8:active:disabled {
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-8:focus {
  outline: 0;
}

.emotion-8:hover {
  background-color: rgba(5, 25, 45, 0.15);
  border-color: #05192d;
  color: #05192d;
}

.emotion-8:active {
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-8:focus {
  box-shadow: none;
}

.emotion-10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 4px;
  border-style: solid;
  border-width: 2px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: capitalize;
  -webkit-transition: 0.15s;
  transition: 0.15s;
  vertical-align: baseline;
  white-space: nowrap;
  background-color: transparent;
  border-color: #05192d;
  color: #05192d;
  padding: 0 15px;
  border-radius: 0px 4px 4px 0px;
  margin: 0;
  margin-left: -2px;
}

.emotion-10:active {
  -webkit-transform: perspective(1px) scale(0.975);
  -moz-transform: perspective(1px) scale(0.975);
  -ms-transform: perspective(1px) scale(0.975);
  transform: perspective(1px) scale(0.975);
}

.emotion-10:disabled,
.emotion-10:hover:disabled,
.emotion-10:active:disabled {
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-10:focus {
  outline: 0;
}

.emotion-10:hover {
  background-color: rgba(5, 25, 45, 0.15);
  border-color: #05192d;
  color: #05192d;
}

.emotion-10:active {
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-10:focus {
  box-shadow: none;
}

<div
  class="emotion-0"
>
  <button
    class="emotion-1"
    type="submit"
  >
    <span
      class="emotion-2"
    >
      Button 1
    </span>
  </button>
  <button
    class="emotion-3"
    type="submit"
  >
    <span
      class="emotion-2"
    >
      Button 2
    </span>
  </button>
  <button
    class="emotion-3"
    type="submit"
  >
    <span
      class="emotion-2"
    >
      Button 3
    </span>
  </button>
  <div
    class="compact emotion-7"
  >
    <button
      class="emotion-8"
      type="submit"
    >
      <span
        class="emotion-2"
      >
        Button 4
      </span>
    </button>
    <button
      class="emotion-10"
      type="submit"
    >
      <span
        class="emotion-2"
      >
        Button 5
      </span>
    </button>
  </div>
</div>
`;

exports[`ButtonGroup renders the small buttons or CompactButtonGroups with 8px spaces 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  white-space: nowrap;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 4px;
  border-style: solid;
  border-width: 2px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: capitalize;
  -webkit-transition: 0.15s;
  transition: 0.15s;
  vertical-align: baseline;
  white-space: nowrap;
  background-color: transparent;
  border-color: #05192d;
  color: #05192d;
  padding: 0 15px;
  margin-left: 0;
}

.emotion-1:active {
  -webkit-transform: perspective(1px) scale(0.975);
  -moz-transform: perspective(1px) scale(0.975);
  -ms-transform: perspective(1px) scale(0.975);
  transform: perspective(1px) scale(0.975);
}

.emotion-1:disabled,
.emotion-1:hover:disabled,
.emotion-1:active:disabled {
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-1:focus {
  outline: 0;
}

.emotion-1:hover {
  background-color: rgba(5, 25, 45, 0.15);
  border-color: #05192d;
  color: #05192d;
}

.emotion-2 {
  color: rgb(5, 25, 45);
  font-family: Studio-Feixen-Sans,Arial;
  font-style: normal;
  font-size: 16px;
  font-weight: 400;
  font-size: 16px;
  line-height: 32px;
  color: #05192d;
  font-weight: bold;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 4px;
  border-style: solid;
  border-width: 2px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: capitalize;
  -webkit-transition: 0.15s;
  transition: 0.15s;
  vertical-align: baseline;
  white-space: nowrap;
  background-color: transparent;
  border-color: #05192d;
  color: #05192d;
  padding: 0 15px;
  margin-left: 8px;
}

.emotion-3:active {
  -webkit-transform: perspective(1px) scale(0.975);
  -moz-transform: perspective(1px) scale(0.975);
  -ms-transform: perspective(1px) scale(0.975);
  transform: perspective(1px) scale(0.975);
}

.emotion-3:disabled,
.emotion-3:hover:disabled,
.emotion-3:active:disabled {
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-3:focus {
  outline: 0;
}

.emotion-3:hover {
  background-color: rgba(5, 25, 45, 0.15);
  border-color: #05192d;
  color: #05192d;
}

.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  white-space: nowrap;
  margin-left: 8px;
}

.emotion-8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 4px;
  border-style: solid;
  border-width: 2px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: capitalize;
  -webkit-transition: 0.15s;
  transition: 0.15s;
  vertical-align: baseline;
  white-space: nowrap;
  background-color: transparent;
  border-color: #05192d;
  color: #05192d;
  padding: 0 15px;
  border-radius: 4px 0px 0px 4px;
  margin: 0;
}

.emotion-8:active {
  -webkit-transform: perspective(1px) scale(0.975);
  -moz-transform: perspective(1px) scale(0.975);
  -ms-transform: perspective(1px) scale(0.975);
  transform: perspective(1px) scale(0.975);
}

.emotion-8:disabled,
.emotion-8:hover:disabled,
.emotion-8:active:disabled {
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-8:focus {
  outline: 0;
}

.emotion-8:hover {
  background-color: rgba(5, 25, 45, 0.15);
  border-color: #05192d;
  color: #05192d;
}

.emotion-8:active {
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-8:focus {
  box-shadow: none;
}

.emotion-10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 4px;
  border-style: solid;
  border-width: 2px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: capitalize;
  -webkit-transition: 0.15s;
  transition: 0.15s;
  vertical-align: baseline;
  white-space: nowrap;
  background-color: transparent;
  border-color: #05192d;
  color: #05192d;
  padding: 0 15px;
  border-radius: 0px 4px 4px 0px;
  margin: 0;
  margin-left: -2px;
}

.emotion-10:active {
  -webkit-transform: perspective(1px) scale(0.975);
  -moz-transform: perspective(1px) scale(0.975);
  -ms-transform: perspective(1px) scale(0.975);
  transform: perspective(1px) scale(0.975);
}

.emotion-10:disabled,
.emotion-10:hover:disabled,
.emotion-10:active:disabled {
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-10:focus {
  outline: 0;
}

.emotion-10:hover {
  background-color: rgba(5, 25, 45, 0.15);
  border-color: #05192d;
  color: #05192d;
}

.emotion-10:active {
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-10:focus {
  box-shadow: none;
}

<div
  class="emotion-0"
>
  <button
    class="emotion-1"
    type="submit"
  >
    <span
      class="emotion-2"
    >
      Button 1
    </span>
  </button>
  <button
    class="emotion-3"
    type="submit"
  >
    <span
      class="emotion-2"
    >
      Button 2
    </span>
  </button>
  <button
    class="emotion-3"
    type="submit"
  >
    <span
      class="emotion-2"
    >
      Button 3
    </span>
  </button>
  <div
    class="compact emotion-7"
  >
    <button
      class="emotion-8"
      type="submit"
    >
      <span
        class="emotion-2"
      >
        Button 4
      </span>
    </button>
    <button
      class="emotion-10"
      type="submit"
    >
      <span
        class="emotion-2"
      >
        Button 5
      </span>
    </button>
  </div>
</div>
`;
